--- a/style.css
+++ b/style.css
@@ -68,10 +68,11 @@ html {
     height: 20rem;
   }
   
+  /*
   input[type="select"] {
   
   }
-  
+  */
   .voiceinator button {
     background: #ffc600;
     border: 0;
